--- a/lib/l10n/app_oc.arb
+++ b/lib/l10n/app_oc.arb
@@ -146,20 +146,21 @@
  "about_spotube": "A perpaus de Spotube",
  "blacklist": "Lista negra",
  "please_esponsòr": "Si vs'agrada Esponsorizar/Balhar",
- "spotube_descripcion": "Spotube, un client Spotify leugèr, multiplateforme e gratuit entà tots",	// aici la revirada s'es acabada
+ "spotube_descripcion": "Spotube, un client Spotify leugèr, multiplateforme e gratuit entà tots",
   "version": "Version",
-  "build_number": "Numéro de version",
-  "founder": "Fondateur",
-  "repository": "Dépôt",
-  "bug_issues": "Bugs + Problèmes",
-  "made_with": "Fabriqué avec ❤️ au Bangladesh🇧🇩",
+  "build_number": "Numero de version",
+  "founder": "Fondator",
+  "repository": "Depaus",
+  "bug_issues": "Bugs + Problèmas",
+  "made_with": "Fabricat dab ",
   "kingkor_roy_tirtho": "Kingkor Roy Tirtho",
   "copyright": "© 2021-{current_year} Kingkor Roy Tirtho",
-  "license": "Licence",
-  "add_spotify_credentials": "Ajoutez vos identifiants Spotify pour commencer",
-  "credentials_will_not_be_shared_disclaimer": "Ne vous inquiétez pas, vos identifiants ne seront ni collectés ni partagés avec qui que ce soit",
-  "know_how_to_login": "Vous ne savez pas comment faire?",
-  "follow_step_by_step_guide": "Suivez le guide étape par étape",
+  "license": "Licéncia",
+  "add_spotify_credentials": "Ajustatz los vòstes identificants Spotify entà començar",
+  "credentials_will_not_be_shared_disclaimer": "ne vs'inquietatz pas, los vòstes identificants ne seràn pas ni collectats ni partatjats dab qui que sia",
+  "know_how_to_login": "Ne sabetz pas com har ?",
+  "follow_step_by_step_guide": "Seguitz lo guida estapa per estapa",
+
   "spotify_cookie": "Cookie Spotify {name}",
   "cookie_name_cookie": "Cookie {name}",
   "fill_in_all_fields": "Veuillez remplir tous les champs",
