--- a/lib/l10n/app_oc.arb
+++ b/lib/l10n/app_oc.arb
@@ -160,22 +160,21 @@
   "credentials_will_not_be_shared_disclaimer": "ne vs'inquietatz pas, los vòstes identificants ne seràn pas ni collectats ni partatjats dab qui que sia",
   "know_how_to_login": "Ne sabetz pas com har ?",
   "follow_step_by_step_guide": "Seguitz lo guida estapa per estapa",
-
   "spotify_cookie": "Cookie Spotify {name}",
   "cookie_name_cookie": "Cookie {name}",
-  "fill_in_all_fields": "Veuillez remplir tous les champs",
-  "submit": "Soumettre",
-  "exit": "Quitter",
-  "previous": "Précédent",
-  "next": "Suivant",
-  "done": "Terminé",
-  "step_1": "Étape 1",
-  "first_go_to": "Tout d'abord, allez sur",
-  "login_if_not_logged_in": "et connectez-vous/inscrivez-vous si vous n'êtes pas connecté",
-  "step_2": "Étape 2",
-  "step_2_steps": "1. Une fois connecté, appuyez sur F12 ou clic droit de la souris > Inspecter pour ouvrir les outils de développement du navigateur.\n2. Ensuite, allez dans l'onglet \"Application\" (Chrome, Edge, Brave, etc.) ou l'onglet \"Stockage\" (Firefox, Palemoon, etc.)\n3. Allez dans la section \"Cookies\", puis dans la sous-section \"https://accounts.spotify.com\"",
-  "step_3": "Étape 3",
-  "success_emoji": "Succès🥳",
+  "fill_in_all_fields": "Volhatz plear tots los camps",
+"submit": "Sosméter",
+ "exit": "Quitar",
+ "previous": "Precedent",
+ "next": "Seguent",
+ "done": "Acabat",
+ "step_1": "Estapa 1",
+ "first_go_to": "Tot purmèr, que vatz sus",
+ "login_teish_not_logged_in": "e que connectatz/inscrivetz-vse si ètz pas connectat",
+ "step_2": "Estapa 2",
+ "step_2_steps": "1. Un còp connectat, que premetz F12 o clic dret de la soritz > Inspectar entà obrir las atrunas de desvolopament deu navigator.\n2. Puish, que vatz dens l'unglet \"Aplicacion\" (Chrome, Edge, Coratjós, etc.) o l'unglet \"Estocatge\" (Firefox, Palemoon, etc.)\n3. Anatz dens la seccion \"Cookies\", puish dens la devath-seccion \"https://accounts.spotify.com\"",
+ "step_3": "Estapa 3",
+ "success_emoji": "Escaduda 🥳",
   "success_message": "Vous êtes maintenant connecté avec succès à votre compte Spotify. Bon travail, mon ami!",
   "step_4": "Étape 4",
   "something_went_wrong": "Quelque chose s'est mal passé",
