--- a/lib/l10n/app_oc.arb
+++ b/lib/l10n/app_oc.arb
@@ -174,87 +174,85 @@
  "step_2": "Estapa 2",
  "step_2_steps": "1. Un còp connectat, que premetz F12 o clic dret de la soritz > Inspectar entà obrir las atrunas de desvolopament deu navigator.\n2. Puish, que vatz dens l'unglet \"Aplicacion\" (Chrome, Edge, Coratjós, etc.) o l'unglet \"Estocatge\" (Firefox, Palemoon, etc.)\n3. Anatz dens la seccion \"Cookies\", puish dens la devath-seccion \"https://accounts.spotify.com\"",
  "step_3": "Estapa 3",
- "success_emoji": "Escaduda 🥳",
-  "success_message": "Vous êtes maintenant connecté avec succès à votre compte Spotify. Bon travail, mon ami!",
-  "step_4": "Étape 4",
-  "something_went_wrong": "Quelque chose s'est mal passé",
-  "piped_instance": "Instance pipée",
-  "piped_description": "L'instance de serveur Piped à utiliser pour la correspondance des pistes",
-  "piped_warning": "Certaines d'entre elles peuvent ne pas fonctionner correctement. Alors utilisez à vos risques et périls",
-  "generate_playlist": "Générer une playlist",
-  "track_exists": "La piste {track} existe déjà",
-  "replace_downloaded_tracks": "Remplacer toutes les pistes téléchargées",
-  "skip_download_tracks": "Ignorer le téléchargement de toutes les pistes téléchargées",
-  "do_you_want_to_replace": "Voulez-vous remplacer la piste existante ?",
-  "replace": "Remplacer",
-  "skip": "Passer",
-  "select_up_to_count_type": "Sélectionnez jusqu'à {count} {type}",
-  "select_genres": "Sélectionner les genres",
-  "add_genres": "Ajouter des genres",
-  "country": "Pays",
-  "number_of_tracks_generate": "Nombre de pistes à générer",
-  "acousticness": "Acoustique",
-  "danceability": "Dansabilité",
-  "energy": "Énergie",
-  "instrumentalness": "Instrumentalité",
-  "liveness": "Interprétation en direct",
-  "loudness": "Sonorité",
-  "speechiness": "Parlé",
-  "valence": "Valeur émotionnelle",
-  "popularity": "Popularité",
-  "key": "Clé",
-  "duration": "Durée (s)",
-  "tempo": "Tempo (BPM)",
-  "mode": "Mode",
-  "time_signature": "Signature rythmique",
-  "short": "Court",
-  "medium": "Moyen",
-  "long": "Long",
-  "min": "Min",
-  "max": "Max",
-  "target": "Cible",
-  "moderate": "Modéré",
-  "deselect_all": "Tout désélectionner",
-  "select_all": "Tout sélectionner", 
-  "are_you_sure": "Êtes-vous sûr(e) ?",
-  "generating_playlist": "Génération de votre playlist personnalisée en cours...",
-  "selected_count_tracks": "{count} pistes sélectionnées",
-  "download_warning": "Si vous téléchargez toutes les pistes en vrac, vous violez clairement les droits d'auteur de la musique et vous causez des dommages à la société créative de la musique. J'espère que vous en êtes conscient. Essayez toujours de respecter et de soutenir le travail acharné des artistes.",
-  "download_ip_ban_warning": "Au fait, votre adresse IP peut être bloquée sur YouTube en raison d'une demande excessive de téléchargements par rapport à la normale. Le blocage de l'IP signifie que vous ne pourrez pas utiliser YouTube (même si vous êtes connecté) pendant au moins 2 à 3 mois à partir de cet appareil IP. Et Spotube ne peut être tenu responsable si cela se produit.",
-  "by_clicking_accept_terms": "En cliquant sur 'accepter', vous acceptez les conditions suivantes :",
-  "download_agreement_1": "Je sais que je pirate de la musique. Je suis méchant(e).",
-  "download_agreement_2": "Je soutiendrai l'artiste autant que possible et je ne fais cela que parce que je n'ai pas d'argent pour acheter leur art.",
-  "download_agreement_3": "Je suis parfaitement conscient(e) que mon adresse IP peut être bloquée sur YouTube et je ne tiens pas Spotube ni ses propriétaires/contributeurs responsables de tout accident causé par mon action actuelle.",
-  "decline": "Refuser",
-  "accept": "Accepter",
-  "details": "Détails",
-  "youtube": "YouTube",
-  "channel": "Chaîne",
-  "likes": "J'aime",
-  "dislikes": "Je n'aime pas",
-  "views": "Vues",
-  "streamUrl": "URL de diffusion",
-  "stop": "Arrêter",
-  "sort_newest": "Trier par les plus récents",
-  "sort_oldest": "Trier par les plus anciens",
-  "sleep_timer": "Minuteur de veille",
-  "mins": "{minutes} minutes",
-  "hours": "{hours} heures",
-  "hour": "{hours} heure",
-  "custom_hours": "Heures personnalisées",
-  "logs": "Journaux",
-  "developers": "Développeurs",
-  "not_logged_in": "Vous n'êtes pas connecté(e)",
-  "search_mode": "Mode de recherche",
-  "audio_source": "Source audio",
-  "ok": "OK",
-  "failed_to_encrypt": "Échec de la cryptage",
-  "encryption_failed_warning": "Spotube utilise le cryptage pour stocker vos données en toute sécurité. Mais cela a échoué. Il basculera donc vers un stockage non sécurisé\nSi vous utilisez Linux, assurez-vous d'avoir installé des services secrets tels que gnome-keyring, kde-wallet et keepassxc",
-  "querying_info": "Interrogation des info...",
-  "piped_api_down": "L'API Piped est hors service",
-  "piped_down_error_instructions": "L'instance Piped {pipedInstance} est actuellement indisponible\n\nChangez soit l'instance, soit le 'Type d'API' pour utiliser l'API officielle de YouTube\n\nN'oubliez pas de redémarrer l'application après la modification",
-  "you_are_offline": "Vous êtes actuellement hors ligne",
-  "connection_restored": "Votre connexion internet a été rétablie",
+ "success_emoji": "Escaduda 🥳","success_messatge": "Qu'ètz adara connectat dab escaduda au vòste compte Spotify. Bon tribalh, lo men amic!",
+ "step_4": "Estapa 4",
+ "something_went_wrong": "Quauquarren que s'ei mau passat",
+ "piped_instància": "Instància pipada",
+ "piped_descripcion": "l'instància de servidor Piped a utilizar entà la correspondéncia de las pistas",
+ "piped_warning": "Daubuas d'enter eras que pòden non pas foncionar corrèctament. Alavetz utilizatz aus vòstes riscs e perilhs",
+ "generate_playlist": "Generar ua playlist",
+ "track_exists": "la pista {track} qu'existeish dejà",
+ "que__replaça" downloaded tracks : "Remplaçar totas las pistas telecargadas",
+ "skip_download_tracks": "Ignorar lo telecargament de totas las pistas telecargadas",
+ "dòs_you_want_to_que" replaça : "Que Voletz remplaçar la pista existenta ?",
+ "que" replaça : "Remplaçar",
+ "skip": "Passar",
+ "select_up_to_count_tipe": "Seleccionatz dinc a {count} {tipe}",
+ "select_genres": "Seleccionar los genres",
+ "add_genres": "Ajustar genres",
+ "country": "País",
+ "number_of_tracks_generate": "Nombre de pistas a generar",
+ "acousticness": "Acostic",
+ "danceability": "Dansabilité",
+ "energy": "Energia",
+ "instrumentalness": "Instrumentalité",
+ "liveness": "Interpretacion en dirècte",
+ "loudness": "Sonoritat",
+ "speechiness": "Parlat",
+ "valéncia": "Valor emocionau",
+ "popularity": "Popularitat",
+ "key": "Clau",
+ "duration": "Durada (s)",
+ "tempo": "Tempo (BPM)",
+ "mòde": "Mòda",
+ "time_signatura": "Signatura ritmica",
+ "shòrt": "Cort",
+ "medium": "Mejan",
+ "long": "Long",
+ "min": "Min",
+ "max": "Max",
+ "target": "Cibla",
+ "moderate": "Moderat",
+ "deselect_all": "Tot désélectionner",
+ "select_all": "Tot seleccionar", 
+ "ara_you_segura": "Qu'Ètz segur(e) ?",
+ "generating_playlist": "Generacion de la vòsta playlist personalizada en cors...",
+ "selected_count_tracks": "{count} pistas seleccionadas","download_warning": "Si telecargatz totas las pistas a barreja, que violatz clarament los drets d'autor de la musica e que causatz domaus a la societat creativa de la musica . Qu'espèri que n'ètz conscient. Ensajatz tostemps de respectar e de sostiéner lo tribalh ahuecat deus artistas.",
+ "download_ip_ban_warning": "Au hèit, la vòsta adreça IP que pòt estar blocada sus YouTube pr'amor d'ua demanda excessiva de telecargaments cap a la normau. Lo blocatge de l'IP que significa que poiratz pas utilizar YouTube (quan seratz connectat) pendent au mensh 2 a 3 mes a partir d'aqueth aparelh IP. E Spotube ne pòt pas estar tienut responsable si aquò que's produseish .",
+ "by_clicking_accept_terms": "En clicant sus 'acceptar', qu'acceptatz las condicions seguentas :",
+ "download_agreement_1": "Que sabi que pirati de la musica. Que soi maishant(e).",
+ "download_agreement_2": "Que sostienerèi l'artista autant que possible e ne hèi pas aquò que pr'amor qu'èi pas argent entà crompar lo lor art.",
+ "download_agreement_3": "Que soi perfèitament conscient(e) qui la mea adreça IP pòt estar blocada sus YouTube e ne tieni pas Spotube ni los sons proprietaris/contribuïdors responsables de tot accident causat per la mea accion actuau.",
+ "decline": "Refusar",
+ "accept": "Acceptar",
+ "details": "Detalhs",
+ "youtube": "YouTube",
+ "channel": "Cadena",
+ "que" clicas "m'agrada" : "Qu'aimi",
+ "dislikes": "N'aimi pas",
+ "views": "Vistas",
+ "streamUrl": "URL de difusion",
+ "estòp": "Arrestar",
+ "sòrt_newest": "Triar peus mei recents",
+ "sòrt_oldest": "Triar peus mei ancians",
+ "sleep_timer": "Minuteur de velha",
+ "mins": "{minutas} minutas",
+ "hours": "{hours} òras",
+ "hour": "{hours} òra",
+ "custom_hours": "Òras personalizadas",
+ "logs": "Jornaus",
+ "developers": "Desvolopaires",
+ "not_logged_in": "N'ètz pas connectat(e)",
+ "search_mòda": "Mòde de recèrca",
+ "audio_hont": "Hont audio",
+ "ok": "OK",
+ "failed_to_encrypt": "Mauescaduda de la criptatge",
+ "encryption_failed_warning": "Spotube qu'utiliza lo criptatge entà estocar las vòstas dadas en tota securitat. Mes aquò que s'i ei mauescadut . Que bascularà donc cap a un estocatge non securizat\nSi utilizatz Linux, ce asseguratz d'aver installat servicis secrets taus com gnòme-keyring, kde-wallet e keepassxc",
+ "querying_informacion": "Interrogacion de las informacions...",
+ "piped_api_down": "l'API Piped qu'ei hòra servici",
+ "piped_down_error_instruccions": "l'instància Piped {pipedInstance} qu'ei actuaument indisponible\n\nChangez sia l'instància, sia lo 'Tipe d'API' entà utilizar l'API oficiau de YouTube\n\nN'qu'oblidatz pas de tornar desmarrar l'aplicacion après la modificacion",
+ "you_ara_offline": "Qu'ètz actuaument hòra linha",
+ "connection_restored": "la vòsta connexion internet qu'ei estada restablida",
   "use_system_title_bar": "Utiliser la barre de titre système",
   "update_playlist": "Mettre à jour la playlist",
   "update": "Mettre à jour",
