--- a/lib/l10n/app_oc.arb
+++ b/lib/l10n/app_oc.arb
@@ -163,7 +163,7 @@
   "spotify_cookie": "Cookie Spotify {name}",
   "cookie_name_cookie": "Cookie {name}",
   "fill_in_all_fields": "Volhatz plear tots los camps",
-"submit": "Sosméter",
+  "submit": "Sosméter",
  "exit": "Quitar",
  "previous": "Precedent",
  "next": "Seguent",
@@ -174,7 +174,8 @@
  "step_2": "Estapa 2",
  "step_2_steps": "1. Un còp connectat, que premetz F12 o clic dret de la soritz > Inspectar entà obrir las atrunas de desvolopament deu navigator.\n2. Puish, que vatz dens l'unglet \"Aplicacion\" (Chrome, Edge, Coratjós, etc.) o l'unglet \"Estocatge\" (Firefox, Palemoon, etc.)\n3. Anatz dens la seccion \"Cookies\", puish dens la devath-seccion \"https://accounts.spotify.com\"",
  "step_3": "Estapa 3",
- "success_emoji": "Escaduda 🥳","success_messatge": "Qu'ètz adara connectat dab escaduda au vòste compte Spotify. Bon tribalh, lo men amic!",
+ "success_emoji": "Escaduda 🥳",
+ "success_messatge": "Qu'ètz adara connectat dab escaduda au vòste compte Spotify. Bon tribalh, lo men amic!",
  "step_4": "Estapa 4",
  "something_went_wrong": "Quauquarren que s'ei mau passat",
  "piped_instància": "Instància pipada",
@@ -228,13 +229,13 @@
  "details": "Detalhs",
  "youtube": "YouTube",
  "channel": "Cadena",
- "que" clicas "m'agrada" : "Qu'aimi",
+ "likes" : "Qu'aimi",
  "dislikes": "N'aimi pas",
  "views": "Vistas",
  "streamUrl": "URL de difusion",
- "estòp": "Arrestar",
- "sòrt_newest": "Triar peus mei recents",
- "sòrt_oldest": "Triar peus mei ancians",
+ "stop": "Arrestar",
+ "sort_newest": "Triar peus mei recents",
+ "sort_oldest": "Triar peus mei ancians",
  "sleep_timer": "Minuteur de velha",
  "mins": "{minutas} minutas",
  "hours": "{hours} òras",
@@ -243,8 +244,8 @@
  "logs": "Jornaus",
  "developers": "Desvolopaires",
  "not_logged_in": "N'ètz pas connectat(e)",
- "search_mòda": "Mòde de recèrca",
- "audio_hont": "Hont audio",
+ "search_mode": "Mòde de recèrca",
+ "audio_sourc": "Hont audio",
  "ok": "OK",
  "failed_to_encrypt": "Mauescaduda de la criptatge",
  "encryption_failed_warning": "Spotube qu'utiliza lo criptatge entà estocar las vòstas dadas en tota securitat. Mes aquò que s'i ei mauescadut . Que bascularà donc cap a un estocatge non securizat\nSi utilizatz Linux, ce asseguratz d'aver installat servicis secrets taus com gnòme-keyring, kde-wallet e keepassxc",
