--- a/lib/l10n/app_oc.arb
+++ b/lib/l10n/app_oc.arb
@@ -12,45 +12,45 @@
   "new_releases": "Navèras sortidas",
   "songs": "Cançons",
   "playing_track": "Lectura de {track}",
-  "coda_clear_alert": "Aquò qu'esfaçarà la cordada d'espèra actuau . {track_length} pistas que seràn suprimidas\nVoulezvosautas contunhar?",
- "load_more": "Cargar mei",
- "playlists": "Listas de lectura",
- "artists": "Artistas",
- "albums": "Albums",
- "tracks": "Pistas",
- "downloads": "Telecargaments",
- "filter_playlists": "Filtrar las vòstas listas de lectura...",
- "liked_tracks": "Pistas aimadas",
- "liked_tracks_descripcion": "Totas las vòstas pistas aimadas",
- "create_playlist": "Crear ua lista de lectura",
- "create_que_"a playlist : "Crear ua lista de lectura",
- "create": "Crear",
- "cancel": "Anullar",
- "playlist_name": "Nom de la lista de lectura",
- "name_of_playlist": "Nom de la lista de lectura",
- "descripcion": "Descripcion",
- "public": "Public",
- "collaborativa": "Collaborativa",
- "search_locau_tracks": "Recercar pistas locaus...",
- "play": "Lectura",
- "delete": "Suprimir",
- "nòna": "Aucun",
- "sòrt_que_"a z : "Triar per òrdre alfabetic",
- "sòrt_z_que" a : "Triar per òrdre alfabetic invèrse",
- "sòrt_artist": "Triar per artista",
- "sòrt_album": "Triar per album",
- "sòrt_tracks": "Triar las pistas",
- "currently_downloading": "Telecargament en cors ({tracks_length})",
- "cancel_all": "Tot anullar",
- "filter_artist": "Filtrar los artistas...",
- "followers": "{followers} abonats",
- "add_artist_to_blacklist": "Ajustar l'artista a la lista negra",
- "tòp_tracks": "Melhoras pistas",
- "fans_also_que" clica "m'agrada" : "los fans qu'aiman tanben",
- "loading": "Cargament...",
- "artist": "Artista",
- "blacklisted": "Lista negra",
- "following": "Abonat",
+  "queue_clear_alert": "Aquò qu'esfaçarà la cordada d'espèra actuau . {track_length} pistas que seràn suprimidas\nVoulezvosautas contunhar?",
+  "load_more": "Cargar mei",
+  "playlists": "Listas de lectura",
+  "artists": "Artistas",
+  "albums": "Albums",
+  "tracks": "Pistas",
+  "downloads": "Telecargaments",
+  "filter_playlists": "Filtrar las vòstas listas de lectura...",
+  "liked_tracks": "Pistas aimadas",
+  "liked_tracks_descripcion": "Totas las vòstas pistas aimadas",
+  "create_playlist": "Crear ua lista de lectura",
+  "create_a_playlist" : "Crear ua lista de lectura",
+  "create": "Crear",
+  "cancel": "Anullar",
+  "playlist_name": "Nom de la lista de lectura",
+  "name_of_playlist": "Nom de la lista de lectura",
+  "description": "Descripcion",
+  "public": "Public",
+  "collaborative": "Collaborativa",
+  "search_locau_tracks": "Recercar pistas locaus...",
+  "play": "Lectura",
+  "delete": "Suprimir",
+  "none": "Aucun",
+  "sort_a_z" : "Triar per òrdre alfabetic",
+  "sort_z_a" : "Triar per òrdre alfabetic invèrse",
+  "sort_artist": "Triar per artista",
+  "sort_album": "Triar per album",
+  "sort_tracks": "Triar las pistas",
+  "currently_downloading": "Telecargament en cors ({tracks_length})",
+  "cancel_all": "Tot anullar",
+  "filter_artist": "Filtrar los artistas...",
+  "followers": "{followers} abonats",
+  "add_artist_to_blacklist": "Ajustar l'artista a la lista negra",
+  "top_tracks": "Melhoras pistas",
+  "fans_also_like" : "los fans qu'aiman tanben",
+  "loading": "Cargament...",
+  "artist": "Artista",
+  "blacklisted": "Lista negra",
+  "following": "Abonat",
  "follow": "S'abonar",
  "artist_url_copied": "URL de l'artista copiada dens qu'ac prèissa-papèrs",
  "added_to_coda": "{tracks} pistas apondudas a la cordada d'espèra",
