--- a/lib/l10n/app_oc.arb
+++ b/lib/l10n/app_oc.arb
@@ -51,28 +51,28 @@
   "artist": "Artista",
   "blacklisted": "Lista negra",
   "following": "Abonat",
- "follow": "S'abonar",
- "artist_url_copied": "URL de l'artista copiada dens qu'ac prèissa-papèrs",
- "added_to_coda": "{tracks} pistas apondudas a la cordada d'espèra",
- "filter_albums": "Filtrar los albums...",
- "synced": "Sincronizat",
- "plain": "Simple",
- "shuffle": "Lectura aleatòria",
- "search_tracks": "Recercar pistas...",
- "released": "Sortit",
- "error": "Error {error}",
- "title": "Títol",
- "time": "Durada",
- "more_accions": "Mei d'accions",
- "download_count": "Telecargament ({count})",
- "add_count_to_playlist": "Ajustar ({count}) a la lista de lectura",
- "add_count_to_coda": "Ajustar ({count}) a la cordada d'espèra",
- "play_count_next": "Léger ({count}) puish",
- "album": "Album",
- "copied_to_clipboard": "{que datè} copiat dens qu'ac prèissa-papèrs",
- "add_to_following_playlists": "Ajustar {track} a las listas de lectura seguentas",
- "add": "Ajustar",
- "added_track_to_coda": "{track} apondut a la cordada d'espèra",
+  "follow": "S'abonar",
+  "artist_url_copied": "URL de l'artista copiada dens qu'ac prèissa-papèrs",
+  "added_to_code": "{tracks} pistas apondudas a la cordada d'espèra",
+  "filter_albums": "Filtrar los albums...",
+  "synced": "Sincronizat",
+  "plain": "Simple",
+  "shuffle": "Lectura aleatòria",
+  "search_tracks": "Recercar pistas...",
+  "released": "Sortit",
+  "error": "Error {error}",
+  "title": "Títol",
+  "time": "Durada",
+  "more_actions": "Mei d'accions",
+  "download_count": "Telecargament ({count})",
+  "add_count_to_playlist": "Ajustar ({count}) a la lista de lectura",
+  "add_count_to_code": "Ajustar ({count}) a la cordada d'espèra",
+  "play_count_next": "Léger ({count}) puish",
+  "album": "Album",
+  "copied_to_clipboard": "{que datè} copiat dens qu'ac prèissa-papèrs",
+  "add_to_following_playlists": "Ajustar {track} a las listas de lectura seguentas",
+  "add": "Ajustar",
+  "added_track_to_code": "{track} apondut a la cordada d'espèra",
  "add_to_coda": "Ajustar a la cordada d'espèra",
  "track_will_play_next": "{track} que serà jogat puish",
  "play_next": "Léger puish",
